Refactored various classes. Added scheduler feature. Added LDAP sync example.
git-svn-id: http://unused-160-33.aus.redhat.com/svn/penrose-server/trunk@959 04c32f3d-caf7-0310-9fe0-d49f5cee804d